--- a/.env
+++ b/.env
@@ -1,13 +1,44 @@
+# =========================
+#  App Config
+# =========================
 APP_NAME=anpr-microservice
 APP_ENV=development
 APP_PORT=8000
 
+# =========================
+#  Kafka Config
+# =========================
 KAFKA_BROKER=localhost:9092
 KAFKA_TOPIC=vehicle_detected
 
+# =========================
+#  Database & Cache
+# =========================
 DB_URL=postgresql://user:password@localhost:5432/anpr
-
 REDIS_URL=redis://localhost:6379/0
 
-MODEL_PATH=./models/yolov8n.pt
-    
+# =========================
+#  YOLO Model
+# =========================
+MODEL_PATH=./models/best.pt
+CONF_THRESHOLD=0.3
+IOU_THRESHOLD=0.45
+
+# =========================
+#  Runtime Options
+# =========================
+DEBUG_SHOW=true        # abrir ventana con stream (solo en local con GUI)
+LOOP_DELAY=0.0         # segundos entre iteraciones (0 = sin delay)
+
+# =========================
+#  Deduplicación
+# =========================
+DEDUP_TTL=3.0                # tiempo mínimo en segundos para volver a publicar misma placa
+SIMILARITY_THRESHOLD=0.9     # similitud mínima (0-1) para considerar dos lecturas iguales
+
+# =========================
+# 📖 OCR Config
+# =========================
+OCR_LANG=en
+OCR_INTERVAL=5          # correr OCR cada N frames (1 = en todos)
+OCR_MIN_LENGTH=4        # longitud mínima de texto válido
