--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,50 @@
 version: "3.9"
 
 services:
-  microservice:
+  anpr-vision-app:
     build: .
-    container_name: anpr-microservice
-    ports:
-      - "8000:8000"
+    container_name: anpr-vision-dev
+    working_dir: /app
+    volumes:
+      - .:/app
     env_file:
       - .env
+    ports:
+      - "8000:8000"
+    command: uvicorn src.api.main:app --host 0.0.0.0 --port 8000 --reload
+    tty: true
     depends_on:
       - kafka
-      - redis
-      - db
 
   kafka:
-    image: bitnami/kafka:3.7.0
+    image: bitnami/kafka:4.0.0
     container_name: kafka
-    environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - ALLOW_PLAINTEXT_LISTENER=yes
     ports:
       - "9092:9092"
+    environment:
+      # Identificación del nodo
+      KAFKA_CFG_NODE_ID: 1
+      KAFKA_CFG_PROCESS_ROLES: broker,controller
+      KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
+      KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      ALLOW_PLAINTEXT_LISTENER: yes
+    healthcheck:
+      test: ["CMD", "bash", "-c", "nc -z localhost 9092"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    ports:
+      - "8080:8080"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
     depends_on:
-      - zookeeper
+      - kafka
 
-  zookeeper:
-    image: bitnami/zookeeper:3.9
-    container_name: zookeeper
-    environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
-    ports:
-      - "2181:2181"
-
-  redis:
-    image: redis:7.4
-    container_name: redis
-    ports:
-      - "6379:6379"
-
-  db:
-    image: postgres:13.22
-    container_name: postgres
-    environment:
-      POSTGRES_USER=user
-      POSTGRES_PASSWORD=password
-      POSTGRES_DB=anpr
-    ports:
-      - "5432:5432"
