--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ REDIS_URL=redis://localhost:6379/0
 #  YOLO Model
 # =========================
 MODEL_PATH=./models/best.pt
-CONF_THRESHOLD=0.3
+CONF_THRESHOLD=0.6
 IOU_THRESHOLD=0.45
 
 # =========================
@@ -33,7 +33,7 @@ LOOP_DELAY=0.0         # segundos entre iteraciones (0 = sin delay)
 # =========================
 #  Deduplicación
 # =========================
-DEDUP_TTL=3.0                # tiempo mínimo en segundos para volver a publicar misma placa
+DEDUP_TTL=9.0                # tiempo mínimo en segundos para volver a publicar misma placa
 SIMILARITY_THRESHOLD=0.9     # similitud mínima (0-1) para considerar dos lecturas iguales
 
 # =========================
@@ -42,3 +42,4 @@ SIMILARITY_THRESHOLD=0.9     # similitud mínima (0-1) para considerar dos lectu
 OCR_LANG=en
 OCR_INTERVAL=5          # correr OCR cada N frames (1 = en todos)
 OCR_MIN_LENGTH=4        # longitud mínima de texto válido
+OCR_MIN_CONFIDENCE=0.85   # confianza mínima del OCR
