--- a/.env
+++ b/.env
@@ -1,45 +1,70 @@
 # =========================
 #  App Config
 # =========================
-APP_NAME=anpr-microservice
-APP_ENV=development
-APP_PORT=8000
+APP_NAME=anpr-microservice   # Nombre del microservicio (para logs, métricas, etc.)
+APP_ENV=development          # Entorno de ejecución: development | staging | production
+APP_PORT=8000                # Puerto donde corre la API FastAPI/Uvicorn
 
 # =========================
 #  Kafka Config
 # =========================
-KAFKA_BROKER=localhost:9092
-KAFKA_TOPIC=vehicle_detected
+KAFKA_BROKER=localhost:9092  # Dirección del broker Kafka
+KAFKA_TOPIC=vehicle_detected # Tópico donde se publican las detecciones de placas
 
 # =========================
 #  Database & Cache
 # =========================
-DB_URL=postgresql://user:password@localhost:5432/anpr
-REDIS_URL=redis://localhost:6379/0
+DB_URL=postgresql://user:password@localhost:5432/anpr  # Conexión a la base de datos Postgres
+REDIS_URL=redis://localhost:6379/0                     # Conexión a Redis (DB 0)
 
 # =========================
 #  YOLO Model
 # =========================
-MODEL_PATH=./models/best.pt
-CONF_THRESHOLD=0.6
-IOU_THRESHOLD=0.45
+YOLO_VERSION=v5
+MODEL_PATH=./models/best.pt   # Ruta al modelo YOLO entrenado para detección de placas
+CONF_THRESHOLD=0.6            # Confianza mínima para aceptar una detección (0-1)
+IOU_THRESHOLD=0.45            # Umbral de IoU para supresión de no-máximos (NMS)
 
 # =========================
 #  Runtime Options
 # =========================
-DEBUG_SHOW=true        # abrir ventana con stream (solo en local con GUI)
-LOOP_DELAY=0.0         # segundos entre iteraciones (0 = sin delay)
+DEBUG_SHOW=true        # Si está en true, abre ventana con stream (solo en local con GUI)
+LOOP_DELAY=0.0         # Segundos entre iteraciones del loop (0 = sin delay, útil en debug)
 
 # =========================
 #  Deduplicación
 # =========================
-DEDUP_TTL=9.0                # tiempo mínimo en segundos para volver a publicar misma placa
-SIMILARITY_THRESHOLD=0.9     # similitud mínima (0-1) para considerar dos lecturas iguales
+DEDUP_TTL=9.0                 # Tiempo mínimo (segundos) para volver a publicar la misma placa
+SIMILARITY_THRESHOLD=0.9      # Similitud mínima (0-1) para considerar dos lecturas como iguales
 
 # =========================
 # 📖 OCR Config
 # =========================
-OCR_LANG=en
-OCR_INTERVAL=5          # correr OCR cada N frames (1 = en todos)
-OCR_MIN_LENGTH=4        # longitud mínima de texto válido
-OCR_MIN_CONFIDENCE=0.85   # confianza mínima del OCR
+OCR_LANG=en                   # Idioma/base de entrenamiento del OCR (ej: en, es, en+es)
+OCR_INTERVAL=5                # Ejecutar OCR cada N frames (1 = en todos los frames)
+OCR_MIN_LENGTH=5               # Longitud mínima del texto reconocido para ser válido
+OCR_MIN_CONFIDENCE=0.85        # Confianza mínima del OCR para aceptar el texto detectado
+
+# ========================
+# CAMERA URL CONFIG
+# ========================
+CAMERA_URL=rtsp://192.168.132.224:8080/h264_ulaw.sdp #SENA
+# CAMERA_URL=rtsp://192.168.1.2:8080/h264_ulaw.sdp   # URL RTSP de la cámara de entrada HOUSE
+
+# =========================
+#  YOLOv5 Config
+# =========================
+YOLOV5_MODEL_PATH=./models/best.pt   # Ruta local al archivo .pt del modelo YOLOv5
+YOLOV5_CONF=0.6                     # Umbral de confianza mínimo para aceptar detecciones (0–1)
+YOLOV5_IOU=0.45                      # Umbral IoU para NMS (elimina cajas solapadas)
+YOLOV5_IMG_SIZE=640                  # Tamaño de la imagen de entrada (debe ser múltiplo de 32)
+YOLOV5_AGNOSTIC=false                # NMS agnóstico a clases (true = mezcla todas las clases)
+YOLOV5_MULTI_LABEL=false             # Permitir múltiples etiquetas por caja (ej. multilabel datasets)
+YOLOV5_MAX_DET=1000                  # Máximo número de detecciones por imagen
+YOLOV5_DEVICE=auto                   # Dispositivo: auto (detecta GPU/CPU), cpu, cuda:0, etc.
+
+
+# (Opcional fallback a HF)
+YOLOV5_HF_REPO=keremberke/yolov5n-license-plate
+YOLOV5_HF_FILENAME=yolov5n-license-plate.pt
+
