--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,11 @@ SQLAlchemy==2.0.35
 asyncpg==0.29.0
 
 ultralytics==8.3.40
+yolov5==7.0.13             # wrapper oficial YOLOv5
 opencv-python==4.10.0.84
 easyocr==1.7.2
 
 numpy==1.26.4
 pillow==10.4.0
 loguru==0.7.2
+huggingface-hub==0.24.6    # para gestionar modelos HF si llegas a usarlos
