changes tracking add

--- a/.env
+++ b/.env
@@ -48,9 +48,9 @@ OCR_MIN_CONFIDENCE=0.85        # Confianza mínima del OCR para aceptar el texto
 # ========================
 # CAMERA URL CONFIG
 # ========================
-CAMERA_URL=rtsp://10.3.233.245:8080/h264_ulaw.sdp #SENA
+CAMERA_URL=rtsp://10.3.232.196:8080/h264_ulaw.sdp #SENA
 # CAMERA_URL=rtsp://192.168.1.2:8080/h264_ulaw.sdp   # URL RTSP de la cámara de entrada HOUSE
-CAMERA_NATIVE= true
+CAMERA_NATIVE= false
 
 # =========================
 #  YOLOv5 Config
