changes tracking home

--- a/.env
+++ b/.env
@@ -48,8 +48,8 @@ OCR_MIN_CONFIDENCE=0.85        # Confianza mínima del OCR para aceptar el texto
 # ========================
 # CAMERA URL CONFIG
 # ========================
-CAMERA_URL=rtsp://10.3.232.196:8080/h264_ulaw.sdp #SENA
-# CAMERA_URL=rtsp://192.168.1.2:8080/h264_ulaw.sdp   # URL RTSP de la cámara de entrada HOUSE
+#CAMERA_URL=rtsp://10.3.232.196:8080/h264_ulaw.sdp #SENA
+ CAMERA_URL=rtsp://192.168.1.2:8080/h264_ulaw.sdp   # URL RTSP de la cámara de entrada HOUSE
 CAMERA_NATIVE= false
 
 # =========================
@@ -68,4 +68,12 @@ YOLOV5_DEVICE=auto                   # Dispositivo: auto (detecta GPU/CPU), cpu,
 # (Opcional fallback a HF)
 YOLOV5_HF_REPO=keremberke/yolov5n-license-plate
 YOLOV5_HF_FILENAME=yolov5n-license-plate.pt
+
+# =========================
+#  ByteTrack Config
+# =========================
+BYTETRACK_THRESH=0.5         # Confianza mínima (0-1) para que una detección entre al tracker
+BYTETRACK_MATCH_THRESH=0.8   # Umbral IoU para asociación entre tracks y detecciones
+BYTETRACK_BUFFER_SIZE=30     # Nº de frames que un track puede sobrevivir sin actualizarse
+BYTETRACK_FPS=30             # Tasa de cuadros estimada del stream (afecta lógica interna)
 
