tracking with new deduplicator

--- a/.env
+++ b/.env
@@ -77,3 +77,8 @@ BYTETRACK_MATCH_THRESH=0.8   # Umbral IoU para asociación entre tracks y detecc
 BYTETRACK_BUFFER_SIZE=30     # Nº de frames que un track puede sobrevivir sin actualizarse
 BYTETRACK_FPS=30             # Tasa de cuadros estimada del stream (afecta lógica interna)
 
+# =========================
+#  Deduplicación
+# =========================
+DEDUP_TTL=9.0          # Tiempo mínimo (segundos) para volver a publicar la misma placa en el mismo track
+PLATE_MIN_LENGTH=5     # Longitud mínima del texto normalizado para que una placa sea válida
