publish in a topic

--- a/.env
+++ b/.env
@@ -8,8 +8,10 @@ APP_PORT=8000                # Puerto donde corre la API FastAPI/Uvicorn
 # =========================
 #  Kafka Config
 # =========================
-KAFKA_BROKER=localhost:9092  # Dirección del broker Kafka
-KAFKA_TOPIC=vehicle_detected # Tópico donde se publican las detecciones de placas
+KAFKA_BROKER=localhost:29092  
+# Dirección del broker Kafka
+KAFKA_TOPIC=vehicle_detected 
+# Tópico donde se publican las detecciones de placas
 
 # =========================
 #  Database & Cache
@@ -22,8 +24,8 @@ REDIS_URL=redis://localhost:6379/0                     # Conexión a Redis (DB 0
 # =========================
 YOLO_VERSION=v5
 MODEL_PATH=./models/best.pt   # Ruta al modelo YOLO entrenado para detección de placas
-CONF_THRESHOLD=0.6            # Confianza mínima para aceptar una detección (0-1)
-IOU_THRESHOLD=0.45            # Umbral de IoU para supresión de no-máximos (NMS)
+CONF_THRESHOLD=0.7           # Confianza mínima para aceptar una detección (0-1)
+IOU_THRESHOLD=0.50            # Umbral de IoU para supresión de no-máximos (NMS)
 
 # =========================
 #  Runtime Options
@@ -36,6 +38,7 @@ LOOP_DELAY=0.0         # Segundos entre iteraciones del loop (0 = sin delay, út
 # =========================
 DEDUP_TTL=9.0                 # Tiempo mínimo (segundos) para volver a publicar la misma placa
 SIMILARITY_THRESHOLD=0.9      # Similitud mínima (0-1) para considerar dos lecturas como iguales
+PLATE_MIN_LENGTH=5   
 
 # =========================
 # 📖 OCR Config
@@ -48,8 +51,8 @@ OCR_MIN_CONFIDENCE=0.85        # Confianza mínima del OCR para aceptar el texto
 # ========================
 # CAMERA URL CONFIG
 # ========================
-CAMERA_URL=rtsp://10.3.233.128:8080/h264_ulaw.sdp #SENA
-#CAMERA_URL=rtsp://192.168.1.2:8080/h264_ulaw.sdp   # URL RTSP de la cámara de entrada HOUSE
+#CAMERA_URL=rtsp://10.3.233.128:8080/h264_ulaw.sdp #SENA
+CAMERA_URL=rtsp://192.168.1.2:8080/h264_ulaw.sdp   # URL RTSP de la cámara de entrada HOUSE
 CAMERA_NATIVE= false
 
 # =========================
@@ -76,9 +79,3 @@ BYTETRACK_THRESH=0.5         # Confianza mínima (0-1) para que una detección e
 BYTETRACK_MATCH_THRESH=0.8   # Umbral IoU para asociación entre tracks y detecciones
 BYTETRACK_BUFFER_SIZE=30     # Nº de frames que un track puede sobrevivir sin actualizarse
 BYTETRACK_FPS=30             # Tasa de cuadros estimada del stream (afecta lógica interna)
-
-# =========================
-#  Deduplicación
-# =========================
-DEDUP_TTL=9.0          # Tiempo mínimo (segundos) para volver a publicar la misma placa en el mismo track
-PLATE_MIN_LENGTH=5     # Longitud mínima del texto normalizado para que una placa sea válida
